<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Doortags</string>
    <string name="main_activity_label">Doortags</string>

    <!-- Action bar items -->
    <string name="prefs_item_title">Settings</string>
    <string name="add_tag_title">Add tag</string>
    <string name="remove_tag_title">Delete</string>
    <string name="write_tag_title">Write tag</string>

    <!-- Preferences -->
    <string name="pref_name_title">Name</string>
    <string name="pref_name_summary">Your name, or what you\'d like to be called</string>
    <string name="pref_number_title">Phone number</string>
    <string name="pref_number_summary">Your phone number</string>

    <!-- Card -->
    <string name="read_hint">Place your device on the tag to read</string>
    <string name="card_header">My card</string>
    <string name="card_name_label">Name</string>
    <string name="card_phone_label">Phone number</string>
    <string name="edit_card_title">Edit card</string>

    <!-- LoginFragment -->
    <string name="login_title">Log in to continue</string>
    <string name="login_password_label">Password</string>
    <string name="login_email_label">Email</string>
    <string name="login_submit_text">Submit</string>
    <string name="login_cancel_text">Cancel</string>

    <!-- TagsListFragment -->
    <string name="no_tags_label">You have no tags</string>
    <string name="touch_tag_label">Please Touch to NFC Tag.</string>
    <string name="refresh_title">Refresh</string>

    <!-- Send message -->
    <string name="fetch_tag_progress_text">Fetching tag information…</string>
    <string name="message_to_label">To:</string>
    <string name="message_location_label">Location:</string>
    <string name="message_hint">Enter your message</string>
    <string name="tag_info_header">Tag information</string>

    <!-- Buttons -->
    <string name="send_button_title">Send</string>
    <string name="cancel_button_title">Cancel</string>
    <string name="submit_button">Submit</string>

    <string name="manage_tags_hint">Tap here to manage your tags (login required)</string>
    <string name="edit_card_hint">Tap to edit your business card</string>
    <string name="create_tag_title">Create tag</string>

</resources>
