<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">

    <TextView android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/read_hint" style="@android:style/TextAppearance.DeviceDefault.Medium"
              android:gravity="center" android:layout_marginTop="25dp" android:layout_marginBottom="25dp"/>

    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:orientation="vertical">

        <TextView android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/card_header"
                  style="@android:style/TextAppearance.DeviceDefault.Medium"
                  />

        <TextView android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/card_name_label" />

        <TextView android:id="@+id/card_name"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content" />

        <TextView android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/card_phone_label" />

        <TextView android:id="@+id/card_phone"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content" />

    </LinearLayout>



</LinearLayout>