<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/card_header"
              style="@style/header"
            />

    <View style="@style/header_line" />

    <TextView style="@style/label"
              android:layout_marginTop="6sp"
              android:text="@string/card_name_label" />

    <TextView android:id="@+id/card_name"
              android:layout_marginBottom="6sp"
              style="@style/value" />

    <TextView style="@style/label"
              android:layout_marginTop="6sp"
              android:text="@string/card_phone_label" />

    <TextView android:id="@+id/card_phone"
              android:layout_marginBottom="6sp"
              style="@style/value" />
</LinearLayout>