<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              style="@style/layout"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">

    <LinearLayout
        android:orientation="vertical"
        style="@style/card">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            style="@style/header"
            android:text="@string/tag_info_header" />

        <View style="@style/header_line" />

        <TableLayout
            android:layout_height="fill_parent"
            android:layout_width="fill_parent">

            <TableRow
                style="@style/card_row">
                <TextView
                    android:id="@+id/sendmsg_preloc"
                    style="@style/label"
                    android:text="@string/message_location_label"/>

                <TextView
                    android:id="@+id/location"
                    style="@style/value"/>
            </TableRow>

        </TableLayout>

    </LinearLayout>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/touch_tag_label"
            android:layout_gravity="center"
            style="@style/large_instruction"/>
</LinearLayout>