<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
            android:id="@+id/sendmsg_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/message_to_label"/>
    <TextView
            android:id="@+id/sendmsg_preloc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/message_location_label"
            android:layout_below="@id/sendmsg_to"/>

    <TextView
            android:id="@+id/sendmsg_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@id/sendmsg_to"/>

    <TextView
            android:id="@+id/sendmsg_location"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sendmsg_name"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@id/sendmsg_preloc"/>

    <EditText
            android:id="@+id/sendmsg_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@android:style/Widget.Holo.Light.EditText"

            android:hint="@string/message_hint"
            android:lines="4"
            android:gravity="top"

            android:layout_below="@id/sendmsg_preloc"/>

    <TextView
        android:id="@+id/char_count"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignParentRight="true"
        android:textColor="@android:color/primary_text_light"
        android:layout_below="@id/sendmsg_text" />

</RelativeLayout>