<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
        >

    <TextView style="@style/large_instruction"
              android:text="@string/read_hint"
              android:paddingLeft="18dp"
              android:paddingRight="18dp"
              android:gravity="center"
              android:layout_marginTop="25dp"
              android:layout_marginBottom="25dp"/>

    <!-- LinearLayout container for dividing the space vertically in half evenly -->
    <LinearLayout android:orientation="vertical"
                  android:layout_height="fill_parent"
                  android:layout_width="fill_parent">
        <FrameLayout android:layout_width="fill_parent"
                     android:layout_height="fill_parent"
                     style="@style/card"
                     android:onClick="openCard"
                     android:layout_weight="1">

            <!-- Card "preview" -->
            <fragment android:name="io.doortags.android.CardFragment"
                      android:id="@+id/card_frag"
                      android:layout_width="fill_parent"
                      android:layout_height="fill_parent" />

            <!-- Overlay -->
            <TextView android:id="@+id/card_overlay"
                      android:layout_width="fill_parent"
                      android:layout_height="fill_parent"
                      android:gravity="center"
                      android:textSize="22sp"
                      android:padding="6sp"
                      android:text="@string/edit_card_hint" />
        </FrameLayout>


        <TextView android:onClick="openTagManager"
                  style="@style/card"
                  android:layout_height="fill_parent"
                  android:layout_weight="1"
                  android:textSize="22sp"
                  android:gravity="center"
                  android:text="@string/manage_tags_hint" />

    </LinearLayout>


</LinearLayout>

